# ColinEngine

./: .gitignore  CMakeLists.txt  COPYING.md  Callbacks.h  Common.c  README.md  all  android-build-dir  clean  desktop.c  droid  editor  esWrapper.c  esWrappers.c  glfwWrappers.c  intrusive_objects.hpp  mount_point.h  prep
android/: .gitignore  AndroidManifest.xml  deletebins
android.OLD/: AndroidManifest.xml
android.OLD/jni/: Android.mk  main.cpp  platform_crap.h  user_callbacks.h
android.OLD/jni/engine/: NoobWerkzFiles.hpp
android.OLD/jni/engine/fs/: Blob.h  FileSystem.cpp  FileSystem.h
android/jni/: .RendererES3.cpp.swo  .gles3jni.cpp.swo  .gles3jni.h.swo  Android.mk  Application.mk  gles3jni.cpp  main.cpp  platform_crap.h
desktop/: CMakeLists.txt  desktop.c  desktop.cpp  gl_utils.h  platform_crap.h
engine/: GameLoop.hpp  esUtils.c  esUtils.h
engine.OLD/: blob.h  main.cpp.OLD
engine.OLD/core/: IntrusiveObject.h  RingBuffer.h
engine.OLD/fs/: Blob.h  FileSystem.cpp  FileSystem.h  Streams.h
engine/core/: IntrusiveObject.h  RefCountingPointer.cpp  RefCountingPointer.h  RingBuffer.h  iObject.h
engine/fs/: Archive.cpp  FileSystem.cpp  FileSystem.h  Files.h  Streams.h
esUtils/: CMakeLists.txt  README.md
esUtils/Common/Include/: esUtil.h
esUtils/Common/Source/Android/: esUtil_Android.c
esUtils/Template/esWrapper/: CMakeLists.txt  esWrapper.c
esUtils/Template/esWrappers/: .gitignore  CMakeLists.txt  esWrappers.c
include/glad/: glad.h
native-activity/jni/: .main.c.swo  main.c
src/: glad.c
user/: user_callbacks.h
(+8 files in other folders)
